add_executable(testcase0 testcase0.cc)
target_link_libraries(testcase0 sim_cache)

add_executable(testcase1 testcase1.cc)
target_link_libraries(testcase1 sim_cache)

add_executable(testcase2 testcase2.cc)
target_link_libraries(testcase2 sim_cache)

add_executable(testcase3 testcase3.cc)
target_link_libraries(testcase3 sim_cache)

add_executable(testcase4 testcase4.cc)
target_link_libraries(testcase4 sim_cache)

add_executable(testcase5 testcase5.cc)
target_link_libraries(testcase5 sim_cache)
